# AFC-Chief-of-Staff

./: .gitignore  README.md  pyproject.toml
agents/: README.md
agents/_lib/: README.md  __init__.py  runs.py
agents/discord_bot/: brain.py  config.py  run.py
agents/discord_bot/cogs/: capture.py  outcomes.py  system.py
agents/test/: run_smoke.py
architecture/: 00-INDEX.md  10-strategy.md  20-architecture-overview.md  30-memory-layer.md  40-action-layer.md  50-channel-layer.md  60-content-pipeline.md  70-build-order.md  80-telemetry-layer.md  90-workflows.md  PRD-phase-1.md  PRD-phase-2.md  PRD-phase-3.1.md  PRD-phase-3.2.md  PRD-phase-3.3.md  PRD-phase-3.4.md
checklists/: CHECKLIST-phase-1.md  CHECKLIST-phase-2.md  CHECKLIST-phase-3.1.md  CHECKLIST-phase-3.2.md  CHECKLIST-phase-3.3.md  CHECKLIST-phase-3.4.md
cli/: README.md  recall.py  spend.py
migrations/: 0001_initial_schema.sql  README.md  verify_schema.sql
scripts/: README.md  keychain_setup.sh  keychain_verify.sh  smoke_test.py  snapshot_backup.sh
tests/: test_capture.py  test_outcomes.py  test_recall.py  test_runs.py
