[project]
name = "aiadaptive-cos"
version = "0.1.0"
description = "AI Adaptive Chief of Staff — persistent operational layer"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Barry Baldwin" }
]
dependencies = [
    # Phase 1: Postgres connectivity.
    "psycopg[binary]>=3.2.0",
    # Phase 2: LLM SDKs for the cost-emission helper.
    # Pinned-minor so the price table stays in sync with SDK behavior.
    "anthropic>=0.80.0,<1.0",
    "google-genai>=2.0.0,<3.0",
    # Phase 3: Discord bot.
    "discord.py>=2.4.0,<3.0",
]

[dependency-groups]
dev = [
    # Linting and type checking — useful from day one
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    # Phase 2: unit tests for the cost helper (mocked, no real API calls).
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
